# AI_module

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/: constants.py  main.py  services.py
api/schemas/: __init__.py  request.py  response.py
app/: prototype_api.py  prototype_backup.py
models/: best_model.joblib  best_model_no_turnover.joblib  dt_model.joblib  label_encoder_no_turnover.joblib  preprocessing_pipeline_minmax.joblib  preprocessing_pipeline_standard.joblib
notebooks/: 01_eda.ipynb  02_cleaning.ipynb  03_labeling.ipynb  04_feature_engineering.ipynb  05_modeling.ipynb  05b_noise_experiment.ipynb  05c_error_severity.ipynb  06_knn_similarity.ipynb  07_shap_analysis.ipynb  08_cold_start.ipynb  09_prototype_validation.ipynb
results/phase5_modeling/: feature_importance_dt.csv  feature_importance_rf.csv  feature_importance_xgb.csv  model_comparison_table.csv
results/phase5b_noise/: noise_experiment_raw.csv  noise_experiment_summary.csv
results/phase5c_severity/: severity_matrix.csv  weighted_error_scores.csv
results/phase6_knn/: knn_agreement_summary.csv  knn_cv_results.csv  (+1 more)
scripts/: run_business_value.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase5b.py  run_phase5c.py  run_phase6.py  run_phase7.py  run_phase8.py  run_phase9_prepare.py  run_phase9_validation.py  verify_api.py
src/: __init__.py  business_value.py  cleaning.py  cold_start.py  data_preparation.py  error_severity.py  features.py  labeling.py  models.py  noise_experiment.py  shap_analysis.py  similarity.py
(+6 files in other folders)
