[project]
name = "bakalarka"
version = "0.1.0"
description = "AI modul pro doporučování typu skladové lokace pro nové zboží"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.43",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "joblib>=1.3",
    "streamlit>=1.28",
    "ipykernel",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.44.0",
]
